# SlicerMp2rageBackgroundSuppression

./: CMakeLists.txt  LICENSE.txt   Mp2rage Background Noise Suppression Module Installation.docx  README.md  mp2rageBackgroundSuppression.s4ext  mp2rage_contrasts.py  ~$2rage Background Noise Suppression Module Installation.docx
BackgroundNoiseSuppression/: BackgroundNoiseSuppression.py  CMakeLists.txt
BackgroundNoiseSuppression/Lib/: mp2rage_contrasts.py
BackgroundNoiseSuppression/Modules/: __init__.py
BackgroundNoiseSuppression/Resources/UI/: BackgroundNoiseSuppression.ui
BackgroundNoiseSupression/: BackgroundNoiseSupression.py  CMakeLists.txt
BackgroundNoiseSupression/Resources/UI/: BackgroundNoiseSupression.ui
